<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/weather_card"
        android:layout_width="102dp"
        android:layout_height="124dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_blue"
            >

            <ImageView
                android:id="@+id/weather_symbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="20dp"
                app:srcCompat="@drawable/ic_favorite" />

            <TextView
                android:id="@+id/temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/weather_symbol"
                android:text="11°C"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/weekday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="35dp"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="35dp"
                android:text="@string/day"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/wind_strength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/weekday"
                android:layout_alignParentStart="true"
                android:layout_marginTop="0dp"
                android:text="@string/vindstyrke"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/wind_direction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/wind_strength"
                android:layout_alignParentStart="true"
                android:layout_marginTop="-2dp"
                android:text="@string/vindretning"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/wind_chill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/wind_direction"
                android:layout_alignParentStart="true"
                android:layout_marginTop="-2dp"
                android:text="@string/vindavkjøling"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/wind_chill"
                android:layout_alignParentStart="true"
                android:layout_marginTop="-2dp"
                android:text="@string/luftfuktighet"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/precipitation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/humidity"
                android:layout_alignParentStart="true"
                android:layout_marginTop="-2dp"
                android:text="@string/nedbør"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>