<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.WeatherTable">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_blue">

        <ImageView
            android:id="@+id/big_weather_symbol"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            app:srcCompat="@drawable/ic_logo_white" />



        <!-- Det ser kanskje ut som at 11°C kommer i veien til logoen,
          men det gjør den ikke når appen kjøres. Bra plassert nå
          tools:text er brukt bare for å se det visuelt i a.studio. -->

        <TextView
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="-10dp"
            android:layout_marginTop="18dp"
            android:layout_marginRight="2dp"
            android:layout_toEndOf="@+id/big_weather_symbol"
            tools:text="11°C"
            android:textColor="@color/white"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/wind_strength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/big_weather_symbol"
            android:text="@string/vindstyrke"
            android:textColor="@color/white"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/wind_direction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/wind_strength"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="2dp"
            android:text="@string/vindretning"
            android:textColor="@color/white"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/wind_gust_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/wind_direction"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="2dp"
            android:text="@string/vindkast"
            android:textColor="@color/white"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/wind_gust_speed"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="2dp"
            android:text="@string/luftfuktighet"
            android:textColor="@color/white"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/precipitation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/humidity"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="2dp"
            android:text="@string/nedbør"
            android:textColor="@color/white"
            android:textSize="11sp" />

    </RelativeLayout>

</FrameLayout>