<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_blue">

    <ImageView
        android:id="@+id/forecast_location"
        android:layout_width="45dp"
        android:layout_height="29dp"
        app:layout_constraintBottom_toBottomOf="@+id/forecast_text_view_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/forecast_text_view_id"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_location"
        app:tint="@color/white" />

    <ImageView
        android:id="@+id/forecast_favorite"
        android:layout_width="45dp"
        android:layout_height="29dp"
        app:layout_constraintBottom_toBottomOf="@+id/forecast_text_view_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/forecast_text_view_id"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/forecast_location"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_baseline_favorite_24"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/forecast_text_view_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/forecast_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/forecast_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="Search"
        app:layout_constraintBottom_toTopOf="@+id/forecast_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:showAsAction="ifRoom|collapseActionView"
        app:srcCompat="@drawable/ic_search"
        app:tint="@color/white" />

    <!--ImageView
        android:id="@+id/favourite_button"
        android:layout_width="45dp"
        android:layout_height="29dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_favorite"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/forecast_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="Search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_search"
        app:tint="@color/white"
        app:showAsAction="ifRoom|collapseActionView"/-->

    <!-- Fragment-tabell eksperiment -->
    <View
        android:id="@+id/forecast_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forecast_location" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:gravity="center_horizontal"
        android:popupBackground="@color/background_blue"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forecast_text_view_id"
        app:layout_constraintVertical_bias="0.105">

    </Spinner>
    <!--TableLayout
        android:layout_width="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forecast_divider"
        android:layout_height="0dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="10"
            >

            <ImageView
                android:id="@+id/big_weather_symbol"
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                app:srcCompat="@drawable/clearsky_day_icon" />

            <fragment
                android:id="@+id/fragment_forecast_0"
                android:name="com.example.app_team35.fragments.WeatherTable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="9" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="10"
            >

            <fragment
                android:id="@+id/fragment_forecast_1"
                android:name="com.example.app_team35.fragments.WeatherTable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="clip_horizontal"
                android:layout_weight="5" />

            <fragment
                android:id="@+id/fragment_forecast_2"
                android:name="com.example.app_team35.fragments.WeatherTable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="clip_horizontal"
                android:layout_weight="5" />
        </TableRow>
    </TableLayout-->

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:cardElevation="0dp"
        app:layout_constraintTop_toBottomOf="@+id/forecast_divider">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_blue">


            <!-- Det ser kanskje ut som at 11°C kommer i veien til logoen,
            men det gjør den ikke når appen kjøres. Bra plassert nå
            tools:text er brukt bare for å se det visuelt i a.studio. -->

            <ImageView
                android:id="@+id/big_weather_symbol"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="28dp"
                android:layout_marginTop="1dp"
                app:srcCompat="@drawable/ic_logo_white" />

            <TextView
                android:id="@+id/temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="-8dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="1dp"
                android:layout_toEndOf="@+id/big_weather_symbol"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:text="11°C" />

            <TextView
                android:id="@+id/wind_strength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="190dp"
                android:layout_marginTop="2dp"
                android:text="@string/vindstyrke"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/wind_direction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/wind_strength"
                android:layout_alignParentStart="true"
                android:layout_marginStart="190dp"
                android:layout_marginTop="2dp"
                android:text="@string/vindretning"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/wind_gust_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/wind_direction"
                android:layout_alignParentStart="true"
                android:layout_marginStart="190dp"
                android:layout_marginTop="2dp"
                android:text="@string/vindkast"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/wind_gust_speed"
                android:layout_alignParentStart="true"
                android:layout_marginStart="190dp"
                android:layout_marginTop="2dp"
                android:text="@string/luftfuktighet"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/precipitation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/humidity"
                android:layout_alignParentStart="true"
                android:layout_marginStart="190dp"
                android:layout_marginTop="2dp"
                android:text="@string/nedbør"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/text_location_name"
                android:layout_width="146dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/big_weather_symbol"
                android:layout_alignParentStart="true"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="25dp"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/activity_conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="44dp"
        android:layout_marginRight="25dp"
        android:text="Velg en aktivitet for å få en vurdering av forholdene "
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <SeekBar
        android:id="@+id/seekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:max="10"
        android:progress="3"
        android:progressTint="@color/white"
        android:thumbTint="@color/white"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_conditions" />

    <TextView
        android:id="@+id/sevenday_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="VARSEL FOR DE NESTE 3 DAGENE"
        android:textColor="#FFFFFF"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/forecast_3days"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />



    <LinearLayout
        android:id="@+id/forecast_3days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent">

        <fragment
            android:id="@+id/fragment_forecast_0"
            android:name="com.example.app_team35.fragments.WeatherTable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <fragment
            android:id="@+id/fragment_forecast_1"
            android:name="com.example.app_team35.fragments.WeatherTable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <fragment
            android:id="@+id/fragment_forecast_2"
            android:name="com.example.app_team35.fragments.WeatherTable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <!--androidx.recyclerview.widget.RecyclerView
        android:id="@+id/sevenday_recycler"
        android:layout_width="match_parent"
        android:layout_height="124dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" /-->


</androidx.constraintlayout.widget.ConstraintLayout>